--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,5 +7,6 @@ WORKDIR /code
 COPY ./package.json /code/
 COPY ./package-lock.json /code/
 RUN npm install
+RUN npm audit fix
 
 CMD ["npm", "start"]
