--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/kekeho/OPodS#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "redis": "^2.8.0",
     "socketio": "^1.0.0"
   }
 }
