--- a/front/package.json
+++ b/front/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "front",
   "version": "1.0.0",
-  "description": "",
+  "description": "front server",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/kekeho/OPodS#readme",
   "dependencies": {
-    "redis": "^2.8.0",
-    "socketio": "^1.0.0"
+    "express": "^4.17.1"
   }
 }
